--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,6 +14,7 @@
     }
   }
 
+
   .mobile {
     display: none;
   }
@@ -322,7 +323,7 @@ nav ul li {
   flex-wrap: wrap;
   padding: 0 24px 32px 24px;
   background-color: #d3d3d3;
-  max-width: auto;
+
 }
 
 .title {
@@ -356,6 +357,8 @@ nav ul li {
   padding: 8px 0;
     line-height: 1.4;
 }
+
+
 
 @media only screen and (max-width:460px) {
   .mobile-title {
@@ -416,6 +419,7 @@ nav ul li {
   width: 100%;
   height: auto;
   margin-bottom: 16px;
+  border: 1px solid #e2e2e2;
 }
 
 }
